create wishlist and update users
