# swagger.yaml
@@ -420,6 +420,21 @@ paths:
       responses:
         '200':
           description: User updated
+
+  /api/users/all:
+    get:
+      summary: Get all users
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of all users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
   /api/admin/login:
     post:
       summary: Admin login
@@ -608,9 +623,76 @@ paths:
       responses:
         '200':
           description: Order status updated
+  /wishlist/add/{userId}:
+    post:
+      summary: Add a product to user's wishlist
+      parameters:
+        - in: path
+          name: userId
+          schema:
+            type: integer
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+                  description: Product ID
+                productName:
+                  type: string
+                productDescription:
+                  type: string
+      responses:
+        '200':
+          description: Product added to wishlist
+
+  /wishlist/{userId}:
+    get:
+      summary: Get all wishlist items for a user
+      parameters:
+        - in: path
+          name: userId
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: List of wishlist items for the user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    wishlistId:
+                      type: integer
+                    createdAt:
+                      type: string
+                      format: date-time
+                    productId:
+                      type: integer
+                    productName:
+                      type: string
+                    productPrice:
+                      type: integer
+                    productStatus:
+                      type: string
+                    productDescription:
+                      type: string
+                    userId:
+                      type: integer
+                    userName:
+                      type: string
+                    userEmail:
+                      type: string
   /:
     get:
       summary: Root hello endpoint
       responses:
         '200':
-          description: Hello string 
+          description: Hello string
